IntelHLS/logs/example4_test2.txt
example/example4_test2.c:8:7: error: cannot initialize a variable of type 'int *' with an lvalue of type 'void *'
        int *b = a;
             ^   ~
1 error generated.
HLS FPGA Parse FAILED.
